# TestGraph

./: CMakeLists.txt  README.md  main.cpp  wControl.cpp  wControl.h  wfile.cpp  wfile.h
data/: S22.s1p
